[project]
name = "emotional-changes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "datasets>=4.5.0",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=4.57.6",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
